Adds dom initial concept

--- a/js-practice-demo.html
+++ b/js-practice-demo.html
@@ -1,32 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <div>count: <span id="count"></span></div>
+
+    <label>Enter your emial adress: </label>
+    <input type="text" name="email" placeholder="enter your email" id="email" />
+
     <button id="increase-btn">Increase</button>
     <button id="decrease-btn">Decrease</button>
+    <div>Output: <span id="output"></span></div>
+    <button id="add-menu">Add menu</button>
 
     <script>
         let count_value = 0;
         const countElement = document.querySelector("#count");
 
-        const increaseElement = document.querySelector("#increase-btn")
-        const decreaseElement = document.querySelector("#decrease-btn")
+        const increaseElement = document.querySelector("#increase-btn");
+        const decreaseElement = document.querySelector("#decrease-btn");
 
-        increaseElement.addEventListener("click", (event) => {
-            count_value = count_value +1;
-            countElement.textContent = count_value;
-        })
+        const emailInputElemet = document.querySelector("#email");
+        const outputElement = document.querySelector("#output");
+        const addMenuElement = document.querySelector("#add-menu");
 
-        decreaseElement.addEventListener("click", (event) => {
-            count_value = count_value -1;
+        const handleIncreaseElement = (event) => {
+            count_value = count_value + 1;
             countElement.textContent = count_value;
-        })
+        }
+
+        const handleDecreaseElement =  (event) => {
+            count_value = count_value - 1;
+            countElement.textContent = count_value;
+        }
+
+        const handleInput = (event) => {
+            console.log(event.target.value)
+            console.log(event.target.name)
+            outputElement.textContent = event.target.value;
+            increaseElement.removeEventListener("click", handleIncreaseElement)
+        }
+
+
+        increaseElement.addEventListener("click", handleIncreaseElement)
+        decreaseElement.addEventListener("click", handleDecreaseElement)
+
+         emailInputElement.addEventListener("input", handleInput)
+         addMenuElement.addEventListener("click", addElementDynamically)
+         
+
+
     </script>
 
 </body>
+
 </html>
