--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         console.log(y); // 10
         console.log(typeof y); // number
 
-        var a = "sanjib"; 
+        var a = "sanjib";
         console.log(a); // sanjib
         function test2() {
             a = "pandey"; // reassigning the value of a which is declared globally
@@ -44,6 +44,80 @@
 
         console.log(typeof null); //object
         console.log(typeof undefined); // undefined
+
+        //Data types in JS
+        //premitive data types: number, string, boolean, null, undefined, symbol
+        // it store data directly in the stack memory
+        let p = 5;
+        console.log(typeof p); // number
+        let r = p;
+        r = 10;
+        console.log(r); //10
+        console.log(p); // 5
+
+        let q = "sanjib";
+        console.log(typeof q); // string
+
+
+
+        // //non-premitive data types: object, array, function
+        // // it store data in heap memory and the reference is stored in stack memory
+
+        //boject = key-value pair
+        let student = {
+            name: "sanjib",
+            age: 24,
+            address: "butwal"
+        };
+        console.log(typeof student); // object
+        console.log(student.name); //sanjib
+        let studentA = student;
+        studentA.name = "pandey";
+        console.log(studentA.name); // pandey
+        console.log(student.name); // pandey , here the name is also changed because both studentA and student are referring to the same object in heap memory
+
+        //array = ordered collection of items
+        let ar = ["sanjib", 20, "butwal", true];
+        console.log(typeof ar); // object
+        console.log(ar[2]); // butwal
+
+        //function = block of code that can be called and executed
+        // in jawa () => used to define function
+        let add = (num1, num2) => num1 + num2;
+        console.log(add(10, 15)); //25;
+        console.log(typeof add); // function
+
+        //Type conversion in js
+        //implicit conversion (type coercion)
+        //in + operation if any one of the operand is string then the other operand is converted to string
+        let val1 = 10;
+        let val2 = "20";
+        console.log(val1 + val2); //1020
+        // but in - , *, / operation both the operand are converted to number
+        console.log(val1 - val2); // -10   
+        let val3 = "hello";
+        console.log(val1 - val3); // NaN (not a number) because "hello" cannot be converted to number
+
+        //explicit conversion
+        let val4 = String(val1); // convert number to string
+        console.log(typeof val4); // string
+
+        let val5 = true; // boolean
+        let val6 = String(val5); // convert boolean to string
+        console.log(typeof val6); // string
+
+        //Equality operator
+        let num1 = 10; // number
+        let num2 = "10"; // string  
+        console.log(num1 == num2); // true, because == operator converts the string to number before comparison
+        console.log(num1 === num2); // false, because === operator checks both value and data-type
+        console.log(num1 != num2); // false
+        console.log(num1 !== num2); // true 
+
+        //logical operators : && , || , !
+        // && (AND) operator returns first falsy value
+        // || (OR) operator returns first truthy value
+        // ! (NOT) operator negates the boolean value
     </script>
 
 </body>
